--- a/.drone.yml
+++ b/.drone.yml
@@ -11,4 +11,9 @@ steps:
   image: adoptopenjdk/openjdk8:jdk8u222-b10
   commands:
   - javac Greet.java
-  - ls 
+  - ls
+  when:
+    branch:
+    - feature/*
+
+  
